--- a/.github/workflows/OrangeFox [OFRP].yml
+++ b/.github/workflows/OrangeFox [OFRP].yml
@@ -45,7 +45,7 @@ name: OrangeFox [OFRP]
 jobs:
   build:
     if: github.event.repository.owner.id == github.event.sender.id
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: write
     steps:
